Copyright (c) 2002-2006 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  1.5.8 (unreleased)

    Bugs fixed

      - Anchors around divs break in explorer, so they were put inside in 
        the xslt renderer.

      - User settings screen did not work when user did not have
        sufficient rights in the Silva Root. This is now fixed.

      - The forms editor should now not through out URL fragment
        information (#foo). This should fix issue 1592.

      - Browser language settings was ignoring English language,
        meaning it would fall back on the first language that was
        non-English in the settings. Now made English is a language
        explicitly known by Silva and SilvaDocument. This also means
        English can be explicitly selected in the user settings
        view. (issue 1572)

  1.5.7

    Features added

      - Added a ReferenceLookupWindowField, to store references to zope
        objects instead of urls.

      - Much i18n polishing

      - Removed commented out template code for listing all email addresses

      - GhostFolders (and probably also Ghosts) could mess up
        SilvaLayout if they referred to a location with a different
        skin setting than the location in which the GhostFolder is
        accessed (even when just looking at its title). This has now
        been fixed.

    Bugs fixed
  
      - Fixed problem in SilvaDocument that used kupu where it whasn't needed 
        and caused js exceptions
      
      - Fix for issue 1618 where messagebox didn't appear in ie also removed 
        nbsp in macro_index
  
      - Fixed issues where hide_from_toc filters wouldn't work in ghost contexts. 
        Also removed some unused cruft from previous filtering implementations.

      - Fixed issue 1608 where tab_edit_revoke_approval caused versioning errors
  
      - In the tab_status "set timings" caused an error without saving the 
        changes and returned a wrong tab
          