@@ -7,6 +7,10 @@ Silva changes
 
     Bugs fixed
 
+      - Incorrect links entered by hand or imported broke the path adapter.
+        Since this made editing the document impossible, I added some 
+        defensive code.
+
       - Anchors around divs break in explorer, so they were put inside in 
         the xslt renderer.
 
